# pix

./: .dockerignore  .env.example  .env.n8n.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PRD.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 2025_12_25_2258-10d03d55a001_initial_database_schema.py
docs/: API_ENDPOINTS.md  GOOGLE_SHEETS_SETUP.md  MERCADOPAGO_SETUP.md  N8N_DEPLOY.md  N8N_MIGRATION.md  QUICK_START.md  README.md  WHATSAPP_SETUP.md
n8n/: init-db.sql
scripts/: setup.sh  setup_sheets.py  test_conversation.sh
src/: main.py
src/api/: mercadopago.py  pix.py  whatsapp.py
src/core/: config.py  database.py  logging.py  middleware.py
src/models/: __init__.py  base.py  client.py  payment.py
src/schemas/: __init__.py  client.py  mercadopago.py  payment.py  pix.py  responses.py  whatsapp.py
src/services/: client_service.py  conversation_handler.py  mercadopago_service.py  message_parser.py  payment_service.py  pix_handler.py  sheets_service.py  webhook_processor.py  whatsapp.py
tests/: test_mp_webhook.json  test_whatsapp_webhook.json
